modified to plot t5gg

--- a/config/SUS12024/T1tttt_SUS12024.cfg
+++ b/config/SUS12024/T1tttt_SUS12024.cfg
@@ -6,13 +6,13 @@
 #####################################################
 #FORMAT: input root histo-name line-color area-color  
 #####################################################
-HISTOGRAM config/SUS12024/T1tttt_results.root hXsec_exp_corr
-EXPECTED config/SUS12024/T1tttt_results.root graph_smoothed_Exp graph_smoothed_ExpP graph_smoothed_ExpM kRed kOrange
-OBSERVED config/SUS12024/T1tttt_results.root graph_smoothed_Obs graph_smoothed_ObsP graph_smoothed_ObsM kBlack kGray
+HISTOGRAM config/SUS12024/limit_t5gg.root upper_limit_cross_section
+EXPECTED config/SUS12024/limit_t5gg.root expected_limit expected_limit_sigma_exp_up expected_limit_sigma_exp_down kRed kOrange
+OBSERVED config/SUS12024/limit_t5gg.root observed_limit observed_limit_sigma_th_up observed_limit_sigma_th_down kBlack kGray
 # Preliminary Simulation or leave empty
 PRELIMINARY Preliminary
 # Lumi in fb 
-LUMI 19.4
+LUMI 19.7
 # Beam energy in TeV
 ENERGY 8
 #
